fixed double scrolling bug

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 
 body,html{
     overflow-x: hidden;
-    overflow-y: visible;
+    overflow: unset;
     padding: 0px;
     margin: 0px;
     background-image: url(assets/tab-backgrounds/home-blur.jpg);
